--- a/invitationCard/src/WeddingInvitation.css
+++ b/invitationCard/src/WeddingInvitation.css
@@ -1,28 +1,55 @@
+body {
+  background-color: #333;
+}
+
 .invitation-card {
     position: relative;
-    width: 100%;
-    height: 100vh;
+    width: 600px;
+    height: auto;
     overflow: hidden; /* Para que el video no se desborde */
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
+    left: 50%;
+    transform: translate(-50%);
   }
   
   .background-video {
     position: absolute;
-    top: 0;
-    left: 0;
+    top: 50%; /* Centra el video verticalmente */
+    left: 50%; /* Centra el video horizontalmente */
+    transform: translate(-50%, -50%); /* Ajusta el centro */
     width: 100%;
-    height: 100%;
-    object-fit: cover; /* Para que el video cubra todo el fondo */
+    height: 100% !important;
+    object-fit: fill; /* Para que el video cubra todo el fondo */
     z-index: -1;
+  }
+
+  h1 {
+    font-size: 5vh;
+  }
+
+  .nombres {
+    font-size: 8vh;
+  }
+
+  .imagenAnillos {
+    width: 30vh;
+  }
+
+  .fechaHoraTexto {
+    font-size: 2.5vh;
+  }
+
+  .dateTexto {
+    font-size: 8vh;
   }
   
   .content {
     position: relative; /* Importante para que el contenido esté encima del video */
     text-align: center;
     color: #333;
-    background-color: rgba(255, 255, 255, 0.7); /* Fondo semi-transparente */
     padding: 20px;
     border-radius: 10px;
     width: 80%;
@@ -30,17 +57,13 @@
   }
   
   .confirm-button {
-    margin-top: 20px;
+    margin-top: 2vh;
     padding: 10px 20px;
-    background-color: #4CAF50;
-    color: white;
-    border: none;
+    color: #781313;
+    border: 1px solid #781313;
+    background-color: white;
     cursor: pointer;
     border-radius: 5px;
-  }
-  
-  .confirm-button:hover {
-    background-color: #45a049;
   }
   
   .modal {
@@ -82,4 +105,20 @@
   }
   .modal-content button:hover{
    background-color: #45a049;
+  }
+
+  .paymentButton:hover {
+    outline: none !important;
+  }
+
+  .paymentButton {
+    outline: none !important;
+    margin-top: 2vh;
+  }
+
+  @media(max-width: 600px) {
+    .invitation-card {
+      margin: 0px;
+      width: 90vw;
+    }
   }
