--- a/invitationCard/src/WeddingInvitation.css
+++ b/invitationCard/src/WeddingInvitation.css
@@ -116,6 +116,52 @@ body {
     margin-top: 2vh;
   }
 
+  .confirmation-popup {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+  }
+  
+  .popup-content {
+    background: #fff;
+    padding: 20px;
+    text-align: center;
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+  }
+  
+  .popup-content h2 {
+    font-family: 'Parisienne', cursive;
+    color: #781313;
+  }
+  
+  .popup-content p {
+    font-family: 'Cormorant Garamond', serif;
+    color: #781313;
+  }
+  
+  .popup-content button {
+    background-color: #781313;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    margin-top: 10px;
+  }
+  
+  .popup-content button:hover {
+    background-color: #9f7a3d;
+  }
+  
+
   @media(max-width: 600px) {
     .invitation-card {
       margin: 0px;
