--- a/invitationCard/src/WeddingInvitation.css
+++ b/invitationCard/src/WeddingInvitation.css
@@ -1,3 +1,4 @@
+
 html, body {
   height: 100%;
   margin: 0;
@@ -10,10 +11,8 @@ html, body {
 body {
   background-color: #333;
   margin: 0px;
-
-  /*
   height: 100vh;
-  overflow: hidden;*/
+  overflow: hidden;
 }
 
 #root {
