--- a/invitationCard/src/WeddingInvitation.css
+++ b/invitationCard/src/WeddingInvitation.css
@@ -1,5 +1,5 @@
-
-html, body {
+html,
+body {
   height: 100%;
   margin: 0;
 }
@@ -19,42 +19,303 @@ body {
   padding: 0px;
 }
 
+.invitation-container {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  perspective: 1000px;
+}
+
+.invitation-inner {
+  position: relative;
+  width: 30vw;
+  height: 100vh;
+  transition: transform 0.8s;
+  transform-style: preserve-3d;
+}
+
+.invitation-container.flipped .invitation-inner {
+  transform: rotateY(180deg);
+}
+
+.invitation-front,
+.invitation-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+}
+
+.invitation-front {
+  background: transparent;
+}
+
+.invitation-back {
+  transform: rotateY(180deg);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: transparent;
+}
+
 .invitation-card {
-    position: relative;
-    width: 30vw;
-    height: auto;
-    overflow: hidden; /* Para que el video no se desborde */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-    left: 50%;
-    transform: translate(-50%);
-    height: 100%;
-    max-height: 100vh;
+  position: relative;
+  width: 100%;
+  height: auto;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  max-height: 100vh;
+}
+
+.background-video {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  height: 100% !important;
+  object-fit: fill;
+  z-index: -1;
+}
+
+h1 {
+  font-size: 5vh;
+}
+
+.nombres {
+  font-size: 8vh;
+}
+
+.imagenAnillos {
+  width: 30vh;
+}
+
+.datesContainer {
+  height: 8vh;
+}
+
+.fechaHoraTexto {
+  font-size: 2.5vh;
+}
+
+.dateTexto {
+  font-size: 8vh;
+}
+
+.lineas {
+  border: none;
+  height: 2px;
+  width: 10vw;
+  background: linear-gradient(to right, #faebb2, #907353);
+  margin: 0;
+}
+
+.content {
+  position: relative;
+  text-align: center;
+  color: #333;
+  padding: 0px 20px;
+  border-radius: 10px;
+  width: 80%;
+  height: 95% !important;
+}
+
+.teEsperamosText {
+  font-size: 5.5vh;
+}
+
+.addressText {
+  font-size: 2.8vh;
+}
+
+.descriptionText {
+  font-size: 2.5vh;
+}
+
+.helpText {
+  font-size: 3vh;
+}
+
+.confirm-button {
+  margin-top: 2vh;
+  padding: 10px 20px;
+  color: #781313;
+  border: 1px solid #781313;
+  background-color: white;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal-content {
+  background-color: white;
+  padding: 20px;
+  border-radius: 10px;
+  text-align: center;
+}
+
+.modal-content input {
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  padding: 10px;
+  border-radius: 5px;
+}
+
+.modal-content label {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 10px;
+}
+
+.modal-content button {
+  padding: 10px;
+  background-color: #4CAF50;
+  color: white;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+.modal-content button:hover {
+  background-color: #45a049;
+}
+
+.paymentButton:hover {
+  outline: none !important;
+}
+
+.paymentButton {
+  outline: none !important;
+  margin-top: 2vh;
+  padding: 0.5vh;
+  bottom: 20px;
+  right: 0px;
+}
+
+.confirmation-popup {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.popup-content {
+  background: #fff;
+  padding: 20px;
+  text-align: center;
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+}
+
+.popup-content h2 {
+  font-family: 'Parisienne', cursive;
+  color: #781313;
+  font-size: 4vh;
+}
+
+.popup-content p {
+  font-family: 'Cormorant Garamond', serif;
+  color: #781313;
+  font-size: 3vh;
+}
+
+.popup-content button {
+  background-color: #781313;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+  margin-top: 10px;
+}
+
+.popup-content button:hover {
+  background-color: #9f7a3d;
+}
+
+.bank-info {
+  text-align: center;
+  background-color: rgba(255, 255, 255, 0.9);
+  padding: 40px;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  width: 95%;
+}
+
+.bank-info h3 {
+  margin-bottom: 20px;
+}
+
+.bank-info p {
+  margin: 10px 0;
+}
+
+.back-button:hover {
+  background-color: #f8f8f8;
+}
+
+.mercadopago-button {
+  transition: background-color 0.3s ease;
+}
+
+.mercadopago-button:hover {
+  background-color: #01bcff !important;
+}
+
+
+
+@media (prefers-color-scheme: dark) {
+  .fechaHoraTexto {
+    color: #781313 !important;
   }
-  
-  .background-video {
-    position: absolute;
-    top: 50%; /* Centra el video verticalmente */
-    left: 50%; /* Centra el video horizontalmente */
-    transform: translate(-50%, -50%); /* Ajusta el centro */
-    width: 100%;
-    height: 100% !important;
-    object-fit: fill; /* Para que el video cubra todo el fondo */
-    z-index: -1;
+}
+
+@media(min-width: 601px) and (max-width: 980px) {
+  .invitation-inner {
+    width: 60vw;
+  }
+}
+
+@media(max-width: 600px) {
+  .invitation-inner {
+    width: 95vw;
+  }
+
+  .content {
+    padding-top: 0px !important;
   }
 
   h1 {
-    font-size: 5vh;
+    font-size: 4vh;
   }
 
   .nombres {
-    font-size: 8vh;
+    font-size: 6vh;
   }
 
   .imagenAnillos {
-    width: 30vh;
+    width: 25vh;
   }
 
   .datesContainer {
@@ -70,21 +331,7 @@ body {
   }
 
   .lineas {
-    border: none;
-    height: 2px;
-    width: 10vw; 
-    background: linear-gradient(to right, #faebb2, #907353);
-    margin: 0;
-  }
-  
-  .content {
-    position: relative; /* Importante para que el contenido esté encima del video */
-    text-align: center;
-    color: #333;
-    padding: 0px 20px;
-    border-radius: 10px;
-    width: 80%;
-    height: 95% !important;
+    width: 30vw;
   }
 
   .teEsperamosText {
@@ -92,180 +339,34 @@ body {
   }
 
   .addressText {
-    font-size: 2.3vh;
+    font-size: 2.8vh;
   }
 
   .descriptionText {
-    font-size: 2.3vh;
+    font-size: 2.5vh;
+    margin-bottom: 1vh;
   }
 
   .helpText {
-    font-size: 2.3vh;
-  }
-  
-  .confirm-button {
-    margin-top: 2vh;
-    padding: 10px 20px;
-    color: #781313;
-    border: 1px solid #781313;
-    background-color: white;
-    cursor: pointer;
-    border-radius: 5px;
-  }
-  
-  .modal {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .modal-content {
-    background-color: white;
-    padding: 20px;
-    border-radius: 10px;
-    text-align: center;
-  }
-  .modal-content input{
-      border: 1px solid rgba(0,0,0,0.2);
-      padding: 10px;
-      border-radius: 5px;
-  }
-  .modal-content label{
-   display: flex;
-   flex-direction: column;
-   margin-bottom: 10px;
-  }
-  
-  .modal-content button{
-   padding: 10px;
-    background-color: #4CAF50;
-    color: white;
-    border: none;
-    cursor: pointer;
-    border-radius: 5px;
-  }
-  .modal-content button:hover{
-   background-color: #45a049;
+    font-size: 2.8vh;
   }
 
-  .paymentButton:hover {
-    outline: none !important;
+  .content {
+    padding: 20px 20px;
+    border-radius: 10px;
+    width: 80%;
+    height: 95% !important;
+  }
+
+  .confirm-button {
+    margin-top: 1vh;
   }
 
   .paymentButton {
-    outline: none !important;
     margin-top: 2vh;
-    padding: 1vh;
-  }
-
-  .confirmation-popup {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.5);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 1000;
+    padding: 0.5vh;
+    bottom: 8vh;
+    right: 0px;
   }
   
-  .popup-content {
-    background: #fff;
-    padding: 20px;
-    text-align: center;
-    border-radius: 10px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
-  }
-  
-  .popup-content h2 {
-    font-family: 'Parisienne', cursive;
-    color: #781313;
-  }
-  
-  .popup-content p {
-    font-family: 'Cormorant Garamond', serif;
-    color: #781313;
-  }
-  
-  .popup-content button {
-    background-color: #781313;
-    color: white;
-    border: none;
-    padding: 10px 20px;
-    border-radius: 5px;
-    cursor: pointer;
-    margin-top: 10px;
-  }
-  
-  .popup-content button:hover {
-    background-color: #9f7a3d;
-  }
-  
-
-  @media(max-width: 600px) {
-
-    .invitation-card {
-      margin: 0px;
-      width: 95vw;
-    }
-
-    h1 {
-      font-size: 4vh;
-    }
-  
-    .nombres {
-      font-size: 6vh;
-    }
-  
-    .imagenAnillos {
-      width: 25vh;
-    }
-  
-    .datesContainer {
-      height: 8vh;
-    }
-  
-    .fechaHoraTexto {
-      font-size: 2.5vh;
-    }
-  
-    .dateTexto {
-      font-size: 8vh;
-    }
-  
-    .lineas {
-      width: 30vw; 
-    }
-
-    .teEsperamosText {
-      font-size: 5.5vh;
-    }
-  
-    .addressText {
-      font-size: 2.3vh;
-    }
-  
-    .descriptionText {
-      font-size: 2vh;
-    }
-  
-    .helpText {
-      font-size: 2.3vh;
-    }
-
-    .content {
-      padding: 20px 20px;
-      border-radius: 10px;
-      width: 80%;
-      height: 95% !important;
-    }
-
-  }
+}
